--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,74 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* styles.css */
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+}
+
+h1 {
+  color: #333;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 10px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+  font-weight: 700;
+  text-decoration: none;
+  background-color: #4285f4;
+  border: none;
+  border: 2px solid #4285f4;
+  border-radius: 5px;
+  transition: .2s ease-in-out;
+}
+
+button:hover{
+  border: 2px solid #4285f4;
+  color: black;
+  background-color: white;
+  
+}
+
+.message-date {
+  color: #888; /* Gray color */
+  font-size: 14px; /* Adjust the font size as needed */
+}
+
+/* FORM */
+
+.message-form {
+  max-width: 400px;
+  
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-top: 5px;
+}
