--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,20 @@
+
+//- doctype html
+//- html
+//-   head
+//-     title= title
+//-     link(rel='stylesheet', href='/stylesheets/style.css')
+//-     link(rel='icon', href='./favicon.ico', type='image/x-icon')
+//-     link(rel='shortcut icon', href='./favicon.ico', type='image/x-icon')
+//-   body
+//-     block content
+
 doctype html
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='icon', href='/favicon.ico', type='image/x-icon')
+    link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
   body
     block content
