--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,14 +1,3 @@
-
-//- doctype html
-//- html
-//-   head
-//-     title= title
-//-     link(rel='stylesheet', href='/stylesheets/style.css')
-//-     link(rel='icon', href='./favicon.ico', type='image/x-icon')
-//-     link(rel='shortcut icon', href='./favicon.ico', type='image/x-icon')
-//-   body
-//-     block content
-
 doctype html
 html
   head
@@ -18,3 +7,10 @@ html
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
   body
     block content
+    
+    footer(style='margin-top: 20px; padding: 10px; background-color: #f4f4f4;')
+      p(style='margin-bottom: 0;')
+        | Developed by 
+        a(href='https://www.github.com/tonybalde', target='_blank', style='color: #333; text-decoration: none;')
+          strong(style='color: #333;') Tony Baldessari
+        | &copy;  #{new Date().getFullYear()}
